--- a/package.json
+++ b/package.json
@@ -7,6 +7,9 @@
     "start":"node src/index.js",
     "dev": "nodemon src/index.js"
   },
+  "engines": {
+    "node": "14.15.4"
+  },
   "author": "",
   "license": "ISC",
   "dependencies": {
