--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
     "dev": "nodemon src/index.js"
   },
   "engines": {
-    "node": "14.15.4"
+    "node": "14.15.4",
+    "npm": "6.14.10"
   },
   "author": "",
   "license": "ISC",
